RESOLVED FIXED25053
cannot play flash videos , nsplugin error
https://bugs.webkit.org/show_bug.cgi?id=25053
Summary cannot play flash videos , nsplugin error
schmirrwurst
Reported 2009-04-05 11:56:58 PDT
When I open a page with integrated flash video plugin, the plugin frame remain black; and after a while a can here the sound, but cannot see video... Linux jaunty 2.6.28-11-generic #39-Ubuntu SMP Thu Apr 2 04:39:54 UTC 2009 x86_64 GNU/Linux arora 0.5-0ubuntu1 $ arora Gtk-Message: Failed to load module "canberra-gtk-module": /usr/lib/gtk- 2.0/modules/libcanberra-gtk-module.so: mauvaise classe ELF: ELFCLASS64 *** NSPlugin Wrapper *** ERROR: failed to initialize brower-side RPC events listener OpenOffice path is '/usr/lib/openoffice' OpenOffice path is '/usr/lib/openoffice' (npviewer.bin:7725): Gtk-WARNING **: /usr/lib/gtk-2.0/2.10.0/engines/libqtcurve.so: mauvaise classe ELF: ELFCLASS64 *** NSPlugin Wrapper *** WARNING: unhandled variable 18 in NPP_GetValue() *** NSPlugin Viewer *** ERROR: NPN_GetValue() invoke: Message timeout *** NSPlugin Viewer *** WARNING:(/build/buildd/nspluginwrapper-1.2.2/src/npw- viewer.c:862):invoke_NPN_GetValue: assertion failed: (rpc_method_invoke_possible(g_rpc_connection)) *** NSPlugin Viewer *** WARNING:(/build/buildd/nspluginwrapper-1.2.2/src/npw- viewer.c:862):invoke_NPN_GetValue: assertion failed: (rpc_method_invoke_possible(g_rpc_connection)) *** NSPlugin Viewer *** WARNING:(/build/buildd/nspluginwrapper-1.2.2/src/npw- viewer.c:862):invoke_NPN_GetValue: assertion failed: (rpc_method_invoke_possible(g_rpc_connection)) *** NSPlugin Viewer *** WARNING:(/build/buildd/nspluginwrapper-1.2.2/src/npw- viewer.c:808):invoke_NPN_GetURLNotify: assertion failed: (rpc_method_invoke_possible(g_rpc_connection)) ^C
Attachments
White plugin bug patch (1.29 KB, patch)
2009-10-02 08:45 PDT, Jocelyn Turcotte
no flags
Unstable initialization+error message fix patch (1.77 KB, patch)
2009-10-02 08:52 PDT, Jocelyn Turcotte
no flags
White plugin bug patch v2 (1.37 KB, patch)
2009-10-08 07:25 PDT, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2009-10-02 08:45:15 PDT
Created attachment 40521 [details] White plugin bug patch This patch corrects the white plugin bug which happened some times. What happened is that the out-of-process plugin was not able to create its window under our xembed container since the window did not exist yet in the X server.
Jocelyn Turcotte
Comment 2 2009-10-02 08:52:58 PDT
Created attachment 40522 [details] Unstable initialization+error message fix patch This patch fix the other part of the bug, the error message and some instabilities with the plugin
Jocelyn Turcotte
Comment 3 2009-10-02 08:54:48 PDT
The canberra-gtk-module error message is unrelated to the unexpected behavior. This is a ubuntu bug: https://bugs.launchpad.net/ubuntu/+source/ia32-libs/+bug/369498
Tor Arne Vestbø
Comment 4 2009-10-02 08:58:12 PDT
Comment on attachment 40522 [details] Unstable initialization+error message fix patch r+
Eric Seidel (no email)
Comment 5 2009-10-02 16:03:59 PDT
Comment on attachment 40521 [details] White plugin bug patch Jocelyn is not a committer, so marking this cq+.
Eric Seidel (no email)
Comment 6 2009-10-02 16:04:22 PDT
Comment on attachment 40522 [details] Unstable initialization+error message fix patch Jocelyn is not a committer, so marking this cq+.
WebKit Commit Bot
Comment 7 2009-10-02 16:12:25 PDT
Comment on attachment 40521 [details] White plugin bug patch Clearing flags on attachment: 40521 Committed r49053: <http://trac.webkit.org/changeset/49053>
WebKit Commit Bot
Comment 8 2009-10-02 16:20:10 PDT
Comment on attachment 40522 [details] Unstable initialization+error message fix patch Clearing flags on attachment: 40522 Committed r49054: <http://trac.webkit.org/changeset/49054>
WebKit Commit Bot
Comment 9 2009-10-02 16:20:14 PDT
All reviewed patches have been landed. Closing bug.
Kenneth Rohde Christiansen
Comment 10 2009-10-03 06:45:29 PDT
I think that such a change would require a comment in the source code, like: // sync our XEmbed container window creation before sending the xid to plugins. QApplication::syncX(); This way we minimize the change that it will be removed by accident in the future.
Jocelyn Turcotte
Comment 11 2009-10-08 07:25:21 PDT
Created attachment 40867 [details] White plugin bug patch v2 Re-add the QApplication::syncX() line for plugin windows removed by r49169 (as Kenneth predicted). Also changed the location of the sync just after the creation instead of just before sending it to the plugin. This reduces the number of unnecessary XSync. I took the opportunity to add a comment in the code :)
Jocelyn Turcotte
Comment 12 2009-10-08 07:27:36 PDT
Correction patch re-added, reopening. (Necessary?)
Simon Hausmann
Comment 13 2009-10-08 07:33:04 PDT
Comment on attachment 40867 [details] White plugin bug patch v2
WebKit Commit Bot
Comment 14 2009-10-08 07:44:33 PDT
Comment on attachment 40867 [details] White plugin bug patch v2 Clearing flags on attachment: 40867 Committed r49300: <http://trac.webkit.org/changeset/49300>
WebKit Commit Bot
Comment 15 2009-10-08 07:44:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.