2009-10-02  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

Reviewed by Tor Arne Vestbø.

        [Qt] X sync our XEmbed container window creation before sending the
        xid to plugins.
        https://bugs.webkit.org/show_bug.cgi?id=25053

        * plugins/qt/PluginViewQt.cpp:
        (WebCore::PluginView::setNPWindowIfNeeded):

Canonical link: https://commits.webkit.org/40612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49053 268f45cc-cd09-0410-ab3c-d52691b4dbfc